codepkg/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Cathedra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Сathedra</label>
        <referenceTo>Cathedra__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountStudents__c</fullName>
        <label>CountStudents</label>
        <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountStudents__c</field>
            <operation>lessOrEqual</operation>
            <value>25</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MaxCountOfStudents</fullName>
        <active>false</active>
        <errorConditionFormula>CountStudents__c  &lt;= 25</errorConditionFormula>
        <errorMessage>Count of students is greater than 25</errorMessage>
    </validationRules>
</CustomObject>